--- a/module12/package.json
+++ b/module12/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "lodash": "^4.17.20",
     "reflect-metadata": "^0.1.13",
     "ts-loader": "^6.2.1",
