--- a/module15/package.json
+++ b/module15/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/app.js"
+    "start": "nodemon --watch 'src/' --exec 'ts-node src/app.ts' -e ts"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.8",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   }
 }
